WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109623
Fix signedness in WebTestProxy
https://bugs.webkit.org/show_bug.cgi?id=109623
Summary
Fix signedness in WebTestProxy
Alec Flett
Reported
2013-02-12 15:31:55 PST
Fix signedness in WebTestProxy
Attachments
Patch
(1.83 KB, patch)
2013-02-12 15:33 PST
,
Alec Flett
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.63 KB, patch)
2013-02-12 15:37 PST
,
Alec Flett
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.58 KB, patch)
2013-02-12 15:39 PST
,
Alec Flett
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alec Flett
Comment 1
2013-02-12 15:33:20 PST
Created
attachment 187949
[details]
Patch
Adam Barth
Comment 2
2013-02-12 15:33:57 PST
Comment on
attachment 187949
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=187949&action=review
> Tools/ChangeLog:19 > +2013-02-12 Alec Flett <
alecflett@chromium.org
> > + > + Fix signedness in WebTestProxy > +
https://bugs.webkit.org/show_bug.cgi?id=109623
> + > + Reviewed by NOBODY (OOPS!). > + > + Fix signedness problem, using size_t instead of int. > + > + * DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp: > + > +2013-02-12 Alec Flett <
alecflett@chromium.org
> > + > + Fix signedness in WebTestProxy > +
https://bugs.webkit.org/show_bug.cgi?id=109623
> + > + Reviewed by NOBODY (OOPS!). > + > + * DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp:
You have a goofy looking changelog
Alec Flett
Comment 3
2013-02-12 15:37:59 PST
Created
attachment 187950
[details]
Patch for landing
Alec Flett
Comment 4
2013-02-12 15:39:50 PST
Created
attachment 187952
[details]
Patch for landing
WebKit Review Bot
Comment 5
2013-02-12 15:54:38 PST
Comment on
attachment 187952
[details]
Patch for landing Clearing flags on attachment: 187952 Committed
r142684
: <
http://trac.webkit.org/changeset/142684
>
WebKit Review Bot
Comment 6
2013-02-12 15:54:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug