Fix signedness in WebTestProxy https://bugs.webkit.org/show_bug.cgi?id=109623

Reviewed by Adam Barth.

Fix signedness problem, using size_t instead of int.

* DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp:


Canonical link: https://commits.webkit.org/127910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142684 268f45cc-cd09-0410-ab3c-d52691b4dbfc